tdf#146101 Filter Context prop in Notebookbar Extension tab and menu

Shows correct icons in Extension tab, and correct extensions in the
right-hand dropdown menu

Change-Id: I6902fc3fe380841356d4c5753cb326df62305d11
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191418
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
(cherry picked from commit f44eca0ace11a195b0516a6cadab9be0a4857331)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191995
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>